# side-django-app

./: README.md  pyproject.toml
infrastructure/: docker-compose.yaml
mat_project/: manage.py
mat_project/mat_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
mat_project/mat_app/migrations/: 0001_initial.py  0002_auto_20240302_0846.py
mat_project/mat_project/: asgi.py  settings.py  urls.py  wsgi.py
